style.css
body {
    background-color: rgba(0, 0, 0, 1.0);
}

.flex_container {
    width: 1440px;
    display: flex;
    flex-direction: column;
    gap: 8px;
}


/* header 스타일 */
.flex_header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 40px;
    background-color: rgba(0, 0, 0, 1.0);
    overflow: hidden;
    position: sticky;
    top: 0;
    z-index: 100;
}

.flex_header_left {
    display: flex;
    align-items: center;
}

.logo {
    height: 100px; /* 높이 42px을 넘어가면 잘리는 것을 이용해서 크기 조정 */
    width: auto;
    padding-left: 24px;
    padding-right: 8px;
}

.button_header {
    background-color: rgba(0, 0, 0, 1.0);
    border: none;
    font-size: 13px; 
    color: rgba(255, 255, 255, 1.0); 
    margin-left: 8px;
}

.flex_header_right {
    display: flex;
    align-items: center;
}

.magnifier {
    height: 23px;
    width: auto;
}

.bell {
    height: 22px;
    width: auto;
    margin-left: 16px;
}

.basic_profile{
    height: 26px;
    width: auto;
    margin-left: 16px;
}

.triangle {
    height: 8px;
    width: auto;
    margin-left: 8px;
    margin-right: 40px;
}


/* hero 스타일 */
.hero {
    position: relative;
}

.overlay_image {
    width: 100%;
    height: auto;
    display: block;
}

.overlay_upper {
    position: absolute;
    width: 100%;
    height: auto;
    top: 30%;
    left: 40px;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.0);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 16px;
}

.overlay_1st_row {
    width: 500px;
    height: auto;
    display: block;
}

.overlay_2nd_row {
    display: flex;
    align-items: center;
    gap: 8px;
}

.overlay_2nd_row .top10_logo {
    height: 30px;
    width: auto;
}

.overlay_2nd_row .rank {
    font-size: 22px;
    color: rgba(255, 255, 255, 1.0);
}

.overlay_3rd_row {
    width: 470px;
    height: auto;
    font-size: 18px;
    color: rgba(255, 255, 255, 1.0);
}

.overlay_4th_row {
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: space-between;
    margin-top: 8px;
}

.overlay_4th_row .overlay_4th_left {
    display: flex;
    align-items: center;
    gap: 8px;
}

.overlay_4th_row .overlay_4th_right {
    display: flex;
    align-items: center;
    gap: 24px;
}

.button_with_play {
    border: none;
    background-color: rgba(255, 255, 255, 1.0);
    font-size: 20px;
    padding: 8px 24px;
    display: flex;
    align-items: center;
    gap: 8px;
}

.play_sign {
    height: 28px;
    width: auto;
}

.button_with_info {
    border: none;
    background-color: rgba(128, 128, 128, 0.6);
    font-size: 20px;
    padding: 8px 16px;
    gap: 8px;
    display: flex;
    align-items: center;
}

.info_sign {
    height: 30px;
    width: auto;
}

.info_font {
    color: rgba(255, 255, 255, 1.0);
}

.sound_sign {
    height: 40px;
    width: auto;
}

.age_limit {
    color: rgba(255, 255, 255, 1.0);
    font-size: 16px;
    background-color: rgba(128, 128, 128, 0.6);
    border-left: 3.5px solid rgba(255, 255, 255, 1.0);
    padding-top: 8px;
    padding-right: 80px;
    padding-bottom: 8px;
    padding-left: 8px;
}


/* 회원 추천 컨텐츠 스타일 */
.contents {
    margin-left: 40px;    
}

nav {
    color: rgba(255, 255, 255, 1.0);
    font-size: 20px;
    padding-bottom: 10px;
}

#contents_for_user {
    grid-area: section1;
}

.contents_for_user_img_flex {
    display: flex;
    align-items: center;
    width: auto;
    height: auto;
    gap: 5px;
    margin-bottom: 25px;
}

.contents_for_user_img {
    width: 220px;
    height: auto;
}


/* top10 시리즈 스타일 */
#top10_contents {
    grid-area: section2;
}

.top10_contents_img_flex {
    display: flex;
    align-items: center;
    width: auto;
    height: auto;
    gap: 5px;
    margin-bottom: 25px;
}

.top10_contents_img_inner_flex {
    display: flex;
    align-items: center;
} 

.rank_font {
    padding-left: 10px;
    font-size: 150px;
    color: gray;
    font-style: italic;
    padding-right: 0px;
    margin-right: 0px;
}

.top10_contents_img {
    width: 126.75px;
    height: auto;
}


/* 새로 올라온 컨텐츠 스타일 */
#new_contents {
    grid-area: section3;
}

.new_contents_img_flex {
    display: flex;
    align-items: center;
    width: auto;
    height: auto;
    gap: 5px;
    margin-bottom: 25px;
}

.new_contents_img {
    width: 220px;
    height: auto;
}


/* footer 스타일 */
footer {
    margin-top: 100px;
    margin-left: 300px;
    width: 700px;
    font-size: 13px;
    color: gray;
    grid-area: footer;
}

.footer_logos {
    display: flex;
    align-items: center;
    gap: 5px;
    height: 28px;
    overflow: hidden;
    margin-bottom: 10px;
}

.footer_logos > img:nth-child(1) {
    height: 28px;
}

.footer_logos > img:nth-child(2) {
    height: 25px;
    margin-left: 15px;
}

.footer_logos > img:nth-child(3) {
    height: 30px;
    margin-left: 15px;
}

.footer_logos > img:nth-child(4) {
    height: 50px;
    margin-left: 5px;
}

.footer_link {
    display: grid;
    height: 70px;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(3, 1fr);
    margin-bottom: 20px;
}

.footer_info {
    font-size: 11px;
    margin-bottom: 10px;
}

